[package]
name = "interstake-yield-generator"
version = "0.1.2"
edition = "2021"
authors = ["Jakub Bogucki <software-solutions@tuta.io>"]
description = "Publica's Yield generator smart contract"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { version = "1.1", features = ["staking"] }
cosmwasm-schema = "1.1"
cosmwasm-storage = "1.1"
cw-storage-plus = "0.15"
cw2 = "0.15"
cw-utils = "0.15"
schemars = "0.8"
cw20-base = {  version = "0.15", features = ["library"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
anyhow = "1"
# cw-multi-test = "0.14"
## Use custom version of multi-test module that implements Staking and Distribution modules,
## required to test delegation and withdraw_reward
## https://github.com/CosmWasm/cw-plus/pull/782
cw-multi-test = { git = "https://github.com/CosmWasm/cw-plus", rev = "33bb3c76dd187d84cea400917e507e37b281598a" }
