[package]
name = "interstake-yield-generator"
version = "0.1.4"
edition = "2021"
authors = ["Jakub Bogucki <software-solutions@tuta.io>"]
description = "Publica's Yield generator smart contract"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { version = "1.1", features = ["staking"] }
cosmwasm-schema = "1.1"
cosmwasm-storage = "1.1"
cw-storage-plus = "0.16"
cw2 = "0.16"
cw20-base = {  version = "0.16", features = ["library"] }
cw-utils = "0.16"
schemars = "0.8"
semver = "1"
serde = { version = "1", default-features = false, features = ["derive"] }
thiserror = "1"

[dev-dependencies]
anyhow = "1"
cw-multi-test = "0.16"
