[package]
name = "interstake-yield-generator"
version = "0.3.0"
edition = "2021"
authors = [
    "Jakub Bogucki <software-solutions@tuta.io>",
    "Maurits Bos <maurits.bos@gmail.com>",
]
description = "Publica's Yield generator smart contract"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { version = "1.1", features = ["staking"] }
cosmwasm-schema = "1.1"
cosmwasm-storage = "1.1"
cw-storage-plus = "1.0"
cw2 = "1.0"
cw20-base = { version = "1.0", features = ["library"] }
cw-utils = "1.0.1"
schemars = "0.8"
semver = "1"
serde = { version = "1", default-features = false, features = ["derive"] }
thiserror = "1"

[dev-dependencies]
anyhow = "1"
cw-multi-test = "0.16"
test-case = "2.2"
interstake-yield-generator = { git = "https://github.com/Interstake/interstake-contracts", tag = "v0.2.0" }
