[package]
name = "publica-yield-generator"
version = "0.1.0"
edition = "2021"
authors = ["Jakub Bogucki <software-solutions@tuta.io>"]
description = "Publica's Yield generator smart contract"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.5
"""

[dependencies]
cosmwasm-std = "1.0.0-beta"
cosmwasm-storage = "1.0.0-beta"
cw-storage-plus = "0.13"
cw2 = "0.13"
cw20 = "0.13"
cw-utils = "0.13"
schemars = "0.8"
cw20-base = {  version = "0.13", features = ["library"] }
stake-cw20 = { path = "../stake-cw20", features = ["library"]}
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
cosmwasm-schema = "1.0.0-beta"
cw-multi-test = "0.13"
